--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 ***
 ***         ITC363 assignment 2 CSS document
 ***
-***         Author:             Ian Blott : 11606379 - charles_sturt@blott.com.au
+***         Author:             Ian Blott : 
 ***         Project:            ITC363 Assignemnt 2
 ***         Dev Date:           5/4/2019
 ***         Completion Date:    19/4/2019
